datasets/dataset_txt/scikit_learn/scikit-learn_5559.txt
Member
fabianp commented on Sep 21, 2011
It seems that the with statement doesn't work properly in python2.5:
======================================================================
ERROR: Failure: SyntaxError (invalid syntax (test_omp.py, line 63))
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/fabian/envs/np13p25/lib/python2.5/site-packages/nose-1.0.0-py2.5.egg/nose/loader.py", line 390, in loadTestsFromName
    addr.filename, addr.module)
  File "/home/fabian/envs/np13p25/lib/python2.5/site-packages/nose-1.0.0-py2.5.egg/nose/importer.py", line 39, in importFromPath
    return self.importFromDir(dir_path, fqname)
  File "/home/fabian/envs/np13p25/lib/python2.5/site-packages/nose-1.0.0-py2.5.egg/nose/importer.py", line 86, in importFromDir
    mod = load_module(part_fqname, fh, filename, desc)
  File "/home/fabian/dev/scikit-learn/sklearn/linear_model/tests/test_omp.py", line 63
    with warnings.catch_warnings(record=True) as w:
                ^
SyntaxError: invalid syntax